# Ren-Browser

./: .cursorignore  .deepsource.toml  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  PROFILING.md  README.md  SECURITY.md  TODO.md  To-Do.md  config  deny.toml  main.py  pyproject.toml  ren-api.py  requirements.txt  run.sh
.github/workflows/: build.yml  docker.yml  python-publish.yml  rust-publish.yml  safety.yml  test.yml
docker/: Dockerfile  compose.yml
ren_api/: main.py
ren_browser/: app.py  logs.py  rns.py
ren_browser/announces/: announces.py
ren_browser/controls/: shortcuts.py
ren_browser/pages/: page_request.py
ren_browser/profiler/: profiler.py
ren_browser/renderer/: micron.py  plaintext.py
ren_browser/renderer/micron/: micron.py
ren_browser/renderer/plaintext/: plaintext.py
ren_browser/storage/: storage.py
ren_browser/tabs/: tabs.py
ren_browser/ui/: settings.py  ui.py
scripts/: builder.py  format.py  lint.py  scan.py
src/: api.rs  caching.rs  lib.rs  main.rs  monitoring.rs  ren_settings.rs  shortcuts.rs  styles.rs
src/api/: mod.rs  ren_api.rs
src/config/: mod.rs  ren_settings.rs  shortcuts.rs
src/interface/: tabs.rs
src/pages/: caching.rs
src/profiling/: monitoring.rs
src/renderers/: html_renderer.rs  mod.rs  mu_renderer.rs
src/renderers/parsers/: micron_constants.rs  mod.rs
tests/: conftest.py  integration_test.rs
tests/integration/: test_app_integration.py
tests/unit/: test_announces.py  test_app.py  test_logs.py  test_page_request.py  test_renderers.py  test_shortcuts.py  test_storage.py  test_tabs.py  test_ui.py
