[package]
name = "ren-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10.0", features = ["tokio", "debug"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
log = "0.4"
simple_logger = { version = "4.2", features = ["timestamps"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true