[package]
name = "ren-browser"
version = "0.4.0"
edition = "2021"

[features]
memory-profiling = ["memory-stats"]

[dependencies]
iced = { version = "0.10.0", features = ["tokio", "debug"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
log = "0.4"
simple_logger = { version = "4.2", features = ["timestamps"] }
toml = "0.8"
dirs = "5.0"
memory-stats = { version = "1.2.0", optional = true }
sysinfo = "0.33.1"
itertools = "0.13.0"

[dev-dependencies]
cargo-audit = "0.21.0"
cargo-deny = "0.16.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true


