[project]
name = "ren-browser"
version = "0.1.0"
description = "A browser for the Reticulum Network."
authors = [
    {name = "Sudo-Ivan"}
]
module = "ren_browser.app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "rns (>=1.0.0,<1.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
ren-browser = "ren_browser.app:run"
ren-browser-web = "ren_browser.app:web"
ren-browser-android = "ren_browser.app:android"
ren-browser-ios = "ren_browser.app:ios"
ren-browser-dev = "ren_browser.app:run_dev"
ren-browser-web-dev = "ren_browser.app:web_dev"
ren-browser-android-dev = "ren_browser.app:android_dev"
ren-browser-ios-dev = "ren_browser.app:ios_dev"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.2.0"

