[project]
name = "ren-browser"
version = "0.2.2"
description = "A browser for the Reticulum Network."
authors = [
    {name = "Sudo-Ivan"}
]
module = "ren_browser.app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "rns (>=1.0.2,<1.5.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ren_browser"]

[project.scripts]
ren-browser = "ren_browser.app:run"
ren-browser-web = "ren_browser.app:web"
ren-browser-android = "ren_browser.app:android"
ren-browser-ios = "ren_browser.app:ios"

[dependency-groups]
dev = [
    "ruff>=0.11.11,<1.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0"
]

[tool.flet]
exclude = ["watchdog"]

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

